--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,5 +1,5 @@
 // import google fonts
-@import url(http://fonts.googleapis.com/css?family=Dosis:300,700|Ubuntu+Mono|Lato:300,400,700,300italic,400italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,700|Ubuntu+Mono|Lato:300,400,700,300italic,400italic&subset=latin,latin-ext);
 
 // Bourbon
 @import 'inc/bourbon/bourbon';  // bourbon plugin
