order process and password hash in admin

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <!-- Application content -->
     <div id="wrap" ui-view autoscroll="false"></div>
 
-    <!-- Page Loader -->
+    <!-- Page loader -->
     <div id="pageloader" page-loader></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
