Added Comments to order and order per optiz

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -69,4 +69,5 @@
 @import "shared/color-schemes"; // color schemes
 @import "shared/print"; // print css
 @import "shared/animations"; // animations
+@import "shared/wease"; // wease main
 
