--- a/static/sass/shared/_color-schemes.scss
+++ b/static/sass/shared/_color-schemes.scss
@@ -441,7 +441,7 @@ $scheme-light-color: $transparent-white-8;
   border-right: 1px solid $transparent-black-1;
   .brand {
     color: $font-color-dark;
-    background-image: url(../images/minovate-logo-color.png);
+    background-image: url(../images/weaselogo2.png);
   }
 }
 
