--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -29,11 +29,14 @@
         <script src="{% static "scripts/orders/controllers/order.controller.js" %}"></script> 
         <script src="{% static "scripts/orders/controllers/order-modal.controller.js" %}"></script> 
         <script src="{% static "scripts/orders/controllers/orders-all.controller.js" %}"></script>
-        <script src="{% static "scripts/orders/controllers/orders-table.controller.js" %}"></script>  
+        <script src="{% static "scripts/orders/controllers/orders-table.controller.js" %}"></script> <script src="{% static "scripts/orders/controllers/comment.controller.js" %}"></script>
+
         <script src="{% static "scripts/orders/directives/newreq.directive.js" %}"></script> 
         <script src="{% static "scripts/orders/directives/add-req.directive.js" %}"></script> 
-        <script src="{% static "scripts/orders/directives/edit-req.directive.js" %}"></script> 
+        <script src="{% static "scripts/orders/directives/edit-req.directive.js" %}"></script>
+        <script src="{% static "scripts/orders/directives/comment.directive.js" %}"></script>  
         <script src="{% static "scripts/orders/directives/currency.directive.js" %}"></script> 
+        <script src="{% static "scripts/orders/directives/contenteditable.directive.js" %}"></script>
         <script src="{% static "scripts/orders/directives/datepicker-popup.directive.js" %}"></script>        
         <!-- layout -->
         <script src="{% static "scripts/layout/layout.module.js" %}"></script> 
