--- a/static/sass/sections/_header.scss
+++ b/static/sass/sections/_header.scss
@@ -39,7 +39,7 @@
 
   .branding {
     background-color: $sidebar-bg;
-    width: 250px;
+    width: 220px;
     height: 45px;
     float: left;
     padding: 0 15px;
@@ -49,10 +49,10 @@
       font-size: $font-size-large;
       font-weight: $font-weight-light;
       color: white;
-      padding-left: 30px;
+      padding-left: 220px;
       height: 45px;
       line-height: 45px;
-      background: url(../images/minovate-logo.png) no-repeat 0 10px;
+      background: url(../images/weaselogo2.png) no-repeat 0;
       float: left;
       @include transition(none);
 
