blank offer create

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -26,6 +26,7 @@
         <script src="{% static "scripts/orders/controllers/request-edit.controller.js" %}"></script>
         <script src="{% static "scripts/orders/controllers/request-add.controller.js" %}"></script>
         <script src="{% static "scripts/orders/controllers/offer.controller.js" %}"></script> 
+        <script src="{% static "scripts/orders/controllers/offer-blank.controller.js" %}"></script> 
         <script src="{% static "scripts/orders/controllers/order.controller.js" %}"></script> 
         <script src="{% static "scripts/orders/controllers/order-modal.controller.js" %}"></script> 
         <script src="{% static "scripts/orders/controllers/orders-all.controller.js" %}"></script>
