bugs fix offer req items view

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
       }
   </script>
   <script src="{% static "js/bower.min.js" %}"></script>
-  <script src="{% static "js/main.min.js" %}"></script>
-
+  <!-- // <script src="{% static "js/main.min.js" %}"></script> -->
+  {% include 'javascripts.html' %}
 </body>
 </html>
