company create and company search

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -15,6 +15,7 @@
         <script src="{% static "scripts/accounts/services/account.service.js" %}"></script>
         <script src="{% static "scripts/accounts/services/company.service.js" %}"></script>
         <script src="{% static "scripts/accounts/controllers/company-settings.controller.js" %}"></script>
+        <script src="{% static "scripts/accounts/controllers/company-create.controller.js" %}"></script>
         <script src="{% static "scripts/accounts/controllers/account.controller.js" %}"></script>
         <script src="{% static "scripts/accounts/controllers/address.controller.js" %}"></script>
         <script src="{% static "scripts/accounts/directives/address.directive.js" %}"></script>
