eventlog logo add history

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -37,9 +37,13 @@
         <script src="{% static "scripts/orders/directives/add-req.directive.js" %}"></script> 
         <script src="{% static "scripts/orders/directives/edit-req.directive.js" %}"></script>
         <script src="{% static "scripts/orders/directives/comment.directive.js" %}"></script>  
-        <script src="{% static "scripts/orders/directives/currency.directive.js" %}"></script> 
+        <script src="{% static "scripts/orders/directives/currency.directive.js" %}"></script>
+        <script src="{% static "scripts/orders/directives/orderactivity.directive.js" %}"></script>  
         <script src="{% static "scripts/orders/directives/contenteditable.directive.js" %}"></script>
-        <script src="{% static "scripts/orders/directives/datepicker-popup.directive.js" %}"></script>        
+        <script src="{% static "scripts/orders/directives/datepicker-popup.directive.js" %}"></script>
+        <!-- messages -->
+        <script src="{% static "scripts/messages/messages.module.js" %}"></script>
+        <script src="{% static "scripts/messages/services/messages.service.js" %}"></script>   
         <!-- layout -->
         <script src="{% static "scripts/layout/layout.module.js" %}"></script> 
         <script src="{% static "scripts/layout/services/layout.service.js" %}"></script>
