--- a/static/sass/shared/_wease.scss
+++ b/static/sass/shared/_wease.scss
@@ -14,3 +14,11 @@
 .login-alert {
 	border-left:0;
 }
+
+.dash {
+	height: 115px;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
