--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -5,6 +5,7 @@
 
             <!-- build:js({.tmp,app}) scripts/app.js -->
         <script src="{% static "scripts/app.js" %}"></script>
+        <!-- <script src="{% static "scripts/filters/filters.js" %}"></script> -->
         <!-- authentication -->
         <script src="{% static "scripts/authentication/authentication.module.js" %}"></script>
         <script src="{% static "scripts/authentication/services/authentication.services.js" %}"></script>
@@ -43,7 +44,10 @@
         <script src="{% static "scripts/orders/directives/datepicker-popup.directive.js" %}"></script>
         <!-- messages -->
         <script src="{% static "scripts/messages/messages.module.js" %}"></script>
-        <script src="{% static "scripts/messages/services/messages.service.js" %}"></script>   
+        <script src="{% static "scripts/messages/services/messages.service.js" %}"></script> 
+        <script src="{% static "scripts/messages/controllers/mail.controller.js" %}"></script>
+        <script src="{% static "scripts/messages/controllers/inbox.controller.js" %}"></script> 
+        <script src="{% static "scripts/messages/directives/inbox.directive.js" %}"></script>   
         <!-- layout -->
         <script src="{% static "scripts/layout/layout.module.js" %}"></script> 
         <script src="{% static "scripts/layout/services/layout.service.js" %}"></script>
@@ -52,6 +56,7 @@
         <script src="{% static "scripts/layout/controllers/dashboard.controller.js" %}"></script>
         <script src="{% static "scripts/layout/controllers/header.controller.js" %}"></script>
         <script src="{% static "scripts/layout/controllers/nav.controller.js" %}"></script> 
+        <script src="{% static "scripts/layout/controllers/popover.controller.js" %}"></script> 
         <script src="{% static "scripts/layout/directives/nav.directive.js" %}"></script>
         <!-- end new ang files -->
         <script src="{% static "scripts/controllers/main.js" %}"></script>
