--- a/static/sass/shared/_wease.scss
+++ b/static/sass/shared/_wease.scss
@@ -22,3 +22,19 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+.panel-heading.bg-white{
+	text-decoration: none;
+	overflow: hidden;
+}
+
+#rightbar{
+	overflow: visible;
+}
+
+.dropdown-menu.pull-left.animated.littleFadeInLeft {
+    position: absolute;
+    top: 0;
+    left: -165%;
+    width: 25em;
+}
