--- a/static/styles/wease.css
+++ b/static/styles/wease.css
@@ -2,3 +2,14 @@
 	text-decoration: none;
 	overflow: hidden;
 }
+
+#rightbar{
+	overflow: visible;
+}
+
+.dropdown-menu.pull-left.animated.littleFadeInLeft {
+    position: absolute;
+    top: 0;
+    left: -165%;
+    width: 25em;
+}
