--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static swampdragon_tags %}
 <!doctype html>
 <html ng-app="minovateApp" ng-controller="IndexController as app" class="no-js {{containerClass}}">
   <head>
@@ -76,7 +76,11 @@
       }
   </script>
   <script src="{% static "js/bower.min.js" %}"></script>
-  <script src="{% static "js/main.min.js" %}"></script>
-
+  <!-- <script src="{% static "js/main.min.js" %}"></script> -->
+  {% include 'javascripts.html' %}
+  {% swampdragon_settings %}
+  <script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'swampdragon/js/dist/datamapper.js' %}"></script>
+  <script type="text/javascript" src="{% static 'swampdragon/js/angular/services.js' %}"></script>
 </body>
 </html>
